This file documents the revision history for Perl extension Mojolicious.

2.92  2012-04-27
  - Improved documentation.
  - Improved tests.

2.91  2012-04-26
  - Added cookies method to Mojo::Message.
  - Updated HTML5 entities in Mojo::Util.
  - Improved documentation.

2.90  2012-04-25
  - Fixed small JavaScript bug in Mojolicious::Plugin::PODRenderer.

2.89  2012-04-24
  - Made logo on built-in templates smaller.
  - Improved CSS of built-in templates.
  - Improved documentation.
  - Improved tests.

2.88  2012-04-24
  - Improved documentation.
  - Improved tests.

2.87  2012-04-23
  - Improved html_escape performance and added pattern support.
  - Improved documentation.
  - Improved tests.
  - Fixed small escaping bug.

2.86  2012-04-23
  - Added support for TO_JSON method to Mojo::JSON.
  - Updated HTML5 entities in Mojo::Util.
  - Increased default heartbeat_timeout from 10 to 20 seconds in
    Mojo::Server::Hypnotoad.
  - Improved Mojo::Template exception handling.
  - Improved ojo exception handling.
  - Improved documentation.
  - Improved tests.
  - Fixed a few HTML5 unescaping bugs.

2.85  2012-04-19
  - Modernized ".perltidyrc".
  - Improved documentation. (diegok, sri)
  - Fixed bug in "user_agent.t".

2.84  2012-04-19
  - Improved documentation.
  - Improved tests.
  - Fixed flash.

2.83  2012-04-18
  - Added hostname verification support to Mojo::IOLoop::Client and
    Mojo::UserAgent.
  - Added SNI support to Mojo::IOLoop::Client and Mojo::UserAgent.
  - Improved documentation.
  - Fixed bug that prevented conditions to work in embedded applications.
  - Fixed bug that changed default values in embedded applications.
  - Fixed small bug in cpanify command.

2.82  2012-04-16
  - Deprecated relaxed placeholders "/(.foo)" in favor of "/#foo".
  - Deprecated Mojolicious::Routes::Route->waypoint.
  - Deprecated Mojolicious::Routes::Route->block.
  - Improved Mojolicious::Routes::Pattern to render formats.
  - Improved regex formatting in routes command.