@@ -3,6 +3,7 @@ This file documents the revision history for Perl extension Mojolicious.
 2.92  2012-04-27
   - Improved documentation.
   - Improved tests.
+  - Fixed attribute namespace selector bugs in Mojo::DOM::CSS.
 
 2.91  2012-04-26
   - Added cookies method to Mojo::Message.
